--- a/public/stylesheets/less/rp-social-buttons.less
+++ b/public/stylesheets/less/rp-social-buttons.less
@@ -38,9 +38,11 @@
 .fb-like {
     vertical-align: top;
     padding: 4px;
+	display: inline-block !important;
 }
 
 .twitter-follow-button {
+	vertical-align: top;
     padding: 4px;
 
 }
